additon of features & unistalled unused package

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 
 .v-application {
   font-family: 'Open Sans', sans-serif!important;
+  color:#42A5F5!important;
 }
 h3 {
   letter-spacing: 0.1875rem !important;
